# wow-loot-model

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
src/sea_of_blossoms_model/: __init__.py  catalog.py  contracts.py  lambda_handler.py  serialization.py  training_data.py
src/sea_of_blossoms_model/baselines/: __init__.py  deterministic.py
src/sea_of_blossoms_model/cli/: predict.py  prepare_training_data.py  serve.py  train.py
src/sea_of_blossoms_model/models/: __init__.py  residue_frequency.py
